--- a/app/views/public/boards/index.html.erb
+++ b/app/views/public/boards/index.html.erb
@@ -19,7 +19,7 @@
 	<div class="col-md-9">
 		<div class="board-title">
 			<p class="text-right">
-				<%= link_to '新規作成フォーム +', new_public_board_path, class: "btn btn-warning" %>
+				<%= link_to '新規作成フォーム +', new_board_path, class: "btn btn-warning" %>
 			</p>
 		</div>
 		<% if !params[:tag_id] %>
