--- a/app/views/public/users/followers.html.erb
+++ b/app/views/public/users/followers.html.erb
@@ -15,7 +15,7 @@
 	<div class="col-md-8">
 		<div class="board-title">
 			<p class="text-right">
-				<%= link_to 'マイページへ戻る', public_user_path(@user), class: "btn btn-warning" %>
+				<%= link_to 'マイページへ戻る', user_path(@user), class: "btn btn-warning" %>
 			</p>
 		</div>
 
@@ -39,7 +39,7 @@
 					<td><%= attachment_image_tag(user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '50x50') %></td>
 					<td><%= user.name %></td>
 					<td><%= l user.created_at %></td>
-					<td><%= link_to '詳細', public_user_path(user), class: 'btn btn-outline-info' %></td>
+					<td><%= link_to '詳細', user_path(user), class: 'btn btn-outline-info' %></td>
 				</tr>
 				<% end %>
 			</tbody>
