--- a/app/views/public/board_likes/_like.html.erb
+++ b/app/views/public/board_likes/_like.html.erb
@@ -1,14 +1,14 @@
 <% if user_signed_in? %>
   <% if board.board_liked_by?(current_user) %>
   <li>お気に入り:
-    <%= link_to public_board_board_likes_path(board), method: :delete, remote: true do %>
+    <%= link_to board_board_likes_path(board), method: :delete, remote: true do %>
     <i class="far fa-surprise fa-2x"></i>
     <span class="balloon3-left"><%= board.board_likes.count %></span>
     <% end %>
   </li>
   <% else %>
   <li>お気に入り:
-    <%= link_to public_board_board_likes_path(board), method: :post, remote: true do %>
+    <%= link_to board_board_likes_path(board), method: :post, remote: true do %>
     <i class="far fa-surprise fa-2x"></i>
     <span class="balloon3-left"><%= board.board_likes.count %></span>
     <% end %>
