--- a/app/views/public/boards/_index.html.erb
+++ b/app/views/public/boards/_index.html.erb
@@ -13,7 +13,7 @@
 		<% boards.each do |board| %>
 			<tr>
 				<td>
-				  <%= link_to board.title, public_board_path(board) %>
+				  <%= link_to board.title, board_path(board) %>
 				</td>
 				<td>
 				<% board.board_tags.each do |board_tag| %>
@@ -30,7 +30,7 @@
 					<% end %>
 				<% end %>
 				</td>
-				<td><%= link_to '詳細', public_board_path(board), class: 'btn btn-outline-info' %></td>
+				<td><%= link_to '詳細', board_path(board), class: 'btn btn-outline-info' %></td>
 			</tr>
 		<% end %>
 		</tbody>
