--- a/app/views/public/boards/_sidebar.html.erb
+++ b/app/views/public/boards/_sidebar.html.erb
@@ -3,27 +3,12 @@
 		<h5 class="text-center p-2">カテゴリー別</h5>
 	</div>
 	<table class="table">
-	   <!--タイトルと本文の検索-->
-	   <!--orでつなげることで複数のカラムが検索できる-->
-	   <%#= search_form_for(boards, url:public_boards_path) do |f| %>
-	   	<%#= f.label :title_or_body_cont, '検索はこちら' %>
-	   <p><%#= f.search_field :title_or_body_cont, class: 'searchform', placeholder: '検索はこちら' %>
-	   </p>
-			<i class="fas fa-search"><%#= f.submit %></i>
-		<%# end %>
 		<tbody>
 		<tr>
 			<td>
-			<% if admin_signed_in? %>
-				<%= link_to manage_boards_path do %>
-					<span>全記事(<%= Board.all.count %>)</span>
-				<% end %>
-			<% else %>
-				<%= link_to public_boards_path do %>
-					<span>全記事(<%= Board.all.count %>)</span>
-				<% end %>
+			<%= link_to boards_path do %>
+				<span>全記事(<%= Board.all.count %>)</span>
 			<% end %>
-
 			</td>
 		</tr>
 		<% tags.each do |tag| %>
@@ -31,14 +16,8 @@
 			<% if tag.board_tags.count != 0 && tag.is_void == false %>
 			<tr>
 				<td class="tag-name">
-				<% if admin_signed_in? %>
-					<%= link_to manage_boards_path(tag_id: tag.id) do  %>
-						<span><%= tag.name %>(<%= tag.board_tags.count %>)</span>
-					<% end %>
-				<% else %>
-					<%= link_to public_boards_path(tag_id: tag.id) do  %>
-						<span><%= tag.name %>(<%= tag.board_tags.count %>)</span>
-					<% end %>
+				<%= link_to boards_path(tag_id: tag.id) do  %>
+					<span><%= tag.name %>(<%= tag.board_tags.count %>)</span>
 				<% end %>
 				</td>
 			</tr>
