--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -7,8 +7,8 @@
   </span>
     <!--掲示板お気に入りボタン---------------------------->
   <div class="ml-auto">
-    <%= link_to '掲示板一覧', public_boards_path, class: 'btn btn-outline-dark' %>
-    <%= link_to '編集', edit_public_board_path(@board), class: 'btn btn-outline-success' %>
+    <%= link_to '掲示板一覧', boards_path, class: 'btn btn-outline-dark' %>
+    <%= link_to '編集', edit_board_path(@board), class: 'btn btn-outline-success' %>
   </div>
 </div>
 
@@ -31,7 +31,7 @@
     <div class="card-text text-right">
       <span id="time">投稿日時: <%= l @board.created_at %></span>
       <p class="font-weight-bold mt-2">
-          <%= link_to public_user_path(@board.user) do %>
+          <%= link_to user_path(@board.user) do %>
             <%= @board.user.name %>
             <%= attachment_image_tag @board.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40' %>
           <% end %>
@@ -56,15 +56,15 @@
           <div class="comment-bottom">
             <span id="time"><%= l comment.created_at %></span>
             <span>
-                <%= link_to public_user_path(comment.user) do %>
+                <%= link_to user_path(comment.user) do %>
                   <%= comment.user.name %>
                   <%= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
                 <% end %>
             </span>
 
             <% if comment.user_id == current_user.id %>
-              <%= link_to '編集', edit_public_board_board_comment_path(comment.id), class: 'btn btn-outline-success' %>
-              <%= link_to '削除', public_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+              <%= link_to '編集', edit_board_board_comment_path(comment.id), class: 'btn btn-outline-success' %>
+              <%= link_to '削除', board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
             <% end %>
 
             <!--コメントに対するいいねボタン Ajax化-->
@@ -87,7 +87,7 @@
     <h4>回答フォーム</h4>
 </div>
 <div class="comment-form">
-  <%= form_with model: [:public, @board, @new_comment], local: true do |f| %>
+  <%= form_with model: [@board, @new_comment], local: true do |f| %>
 
      <%#= f.hidden_field :board_id %>
     <div class="form-group">
@@ -96,7 +96,7 @@
 
     <div class="actions">
       <%= f.submit '送信する', class: 'btn btn-outline-info' %>
-      <%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %>
+      <%= link_to '戻る', boards_path, class: 'btn btn-outline-dark' %>
     </div>
   <% end %>
 </div>
