--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -5,18 +5,17 @@
       <i class="fas fa-user-cog"></i>
     </h3>
     <div class="text-right">
-      <%= link_to "マイページの確認", public_user_path(@user), class: "btn btn-outline-dark" %>
+      <%= link_to "マイページの確認", user_path(@user), class: "btn btn-outline-dark" %>
     </div>
     <div class="form-set">
 
       <div class="form-horizontal">
-      <%= form_with model: [:public, @user], local: true do |f| %>
+      <%= form_with model: @user, local: true do |f| %>
         <%= render 'shared/error_messages', obj: @user %>
 
         <div class="form-group">
           <%= attachment_image_tag(@user, :profile_image, :fill, 200, 200,fallback: 'no_image.jpg', size: '50x50') %><hr />
           <%= f.attachment_field :profile_image %><hr />
-
         </div>
 
         <div class="form-group">
@@ -36,14 +35,14 @@
 
         <div class="form-group">
           パスワード変更設定<hr />
-          <%= link_to "パスワード変更", public_user_users_password_path(@user), class: "btn btn-outline-dark" %>
+          <%= link_to "パスワード変更", user_users_password_path(@user), class: "btn btn-outline-dark" %>
         </div>
 
         <div class="actions">
           <%= f.submit "変更を保存する", class: "btn btn-outline-primary" %>
-          <%= link_to "戻る", public_user_path(@user), class: "btn btn-outline-dark" %>
+          <%= link_to "戻る", user_path(@user), class: "btn btn-outline-dark" %>
           <div class="user-button">
-            <%= link_to "退会", public_users_hide_path(@user), method: :put, data: { confirm: '本当に退会しますか？'}, class: 'btn btn-outline-danger' %>
+            <%= link_to "退会", users_hide_path(@user), method: :put, data: { confirm: '本当に退会しますか？'}, class: 'btn btn-outline-danger' %>
           </div>
         </div>
 
