[fix]routing-fix

--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -70,3 +70,15 @@ a {
 .thead {
   background-color:#59b9c6;
 }
+
+.fa-crown {
+  color: #fcc800;
+}
+
+.fa-newspaper {
+  color: #efefef;
+}
+
+.fa-list-alt {
+  color: #ffedab;
+}
