--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -40,7 +40,7 @@
 				</tr>
 				<tr>
 					<th class="table-secondary">ユーザーページ</th>
-					<td><%= link_to '確認する', public_user_path(@user), class: 'btn btn-default btn-sm btn-outline-primary' %></td>
+					<td><%= link_to '確認する', user_path(@user), class: 'btn btn-default btn-sm btn-outline-primary' %></td>
 				</tr>
 				<tr>
 					<th class="table-secondary"></th>
