--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -27,13 +27,13 @@
     <span><%= simple_format(@board.body) %></span>
   </div>
   <div class="card-body">
-    <%= attachment_image_tag @board, :image, :fill, 200, 200, fallback: 'no_image.jpg', size: '200x150' %>
+    <%= attachment_image_tag @board, :image, :fill, 200, 200, size: '200x150' %>
     <div class="card-text text-right">
       <span id="time">投稿日時: <%= l @board.created_at %></span>
       <p class="font-weight-bold mt-2">
           <%= link_to user_path(@board.user) do %>
-            <%= @board.user.name %>
-            <%= attachment_image_tag @board.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40' %>
+            <%#= @board.user.name %>
+            <%#= attachment_image_tag @board.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40' %>
           <% end %>
       </p>
     </div>
@@ -56,10 +56,10 @@
           <div class="comment-bottom">
             <span id="time"><%= l comment.created_at %></span>
             <span>
-                <%= link_to user_path(comment.user) do %>
-                  <%= comment.user.name %>
-                  <%= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
-                <% end %>
+                <%#= link_to user_path(comment.user) do %>
+                  <%#= comment.user.name %>
+                  <%#= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
+                <%# end %>
             </span>
 
             <% if comment.user_id == current_user.id %>
