--- a/app/views/manage/boards/show.html.erb
+++ b/app/views/manage/boards/show.html.erb
@@ -26,7 +26,7 @@
   <div class="board-profile">
       <span id="time">投稿日時: <%= l @board.created_at %></span>
       <p class="text-right font-weight-bold mr-10">
-        <%= link_to public_user_path(@board.user) do %>
+        <%= link_to user_path(@board.user) do %>
           <%= @board.user.name %>
           <%= attachment_image_tag @board.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40' %>
         <% end %>
@@ -48,7 +48,7 @@
           <div class="comment-bottom">
             <span id="time"><%= l comment.created_at %></span>
             <span>
-                <%= link_to public_user_path(comment.user) do %>
+                <%= link_to user_path(comment.user) do %>
                   <%= comment.user.name %>
                   <%= attachment_image_tag(comment.user, :profile_image, :fill, 200, 200, fallback: 'no_image.jpg', size: '40x40') %>
                 <% end %>
