--- a/app/views/public/board_comments/edit.html.erb
+++ b/app/views/public/board_comments/edit.html.erb
@@ -5,8 +5,9 @@
 				<h4 class="text-center p-2">コメント編集</h4>
 			</div>
 			<div class="card-body">
+			<!--パーシャル活用修正-->
 			<%#= render 'board_comments/form', board_comment: @board_comment, obj: @board %>
-			<%= form_with model: [:public, @board_comment],url: public_board_board_comment_path, local: true do |f| %>
+			<%= form_with model: @board_comment,url: board_board_comment_path, local: true do |f| %>
 
 				<%= render 'shared/error_messages', obj: @board_comment %>
 				<div class="form-group">
@@ -19,7 +20,7 @@
 					<!--ボタンサイズ調整-->
 					<%= f.submit '投稿する', class: 'btn btn-outline-info form-control' %><hr />
 				</div>
-					<%= link_to '戻る', public_boards_path, class: 'btn btn-outline-dark' %>
+					<%= link_to '戻る', boards_path, class: 'btn btn-outline-dark' %>
 			<% end %>
 			</div>
 		</div>
