--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -8,7 +8,9 @@
 	</thead>
 	<tbody>
 		<tr>
-			<th><%= attachment_image_tag user, :profile_image, :fill, 200, 200, size: '50x50', fallback: 'no_image.jpg' %></th>
+			<th><!--かんたんログイン,修正必要-->
+				<%= attachment_image_tag user, :profile_image, :fill, 200, 200, size: '50x50', fallback: 'no_image.jpg' %>
+			</th>
 		</tr>
 		<tr>
 		<% if admin_signed_in? %>
