[fix]routing-manage-fix

--- a/app/assets/stylesheets/board_comment.scss
+++ b/app/assets/stylesheets/board_comment.scss
@@ -43,3 +43,10 @@ li {
 .comment-header {
   margin-top:60px;
 }
+
+.comment-form { /*コメントフォーム*/
+  border: 2px solid gray;
+  padding: 20px;
+  background-color: white;
+}
+
