--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,8 @@
       <%= yield %>
     </div>
 
+    <footer class="foote text-muted">
       <%= render 'shared/footer' %>
+    </footer>
   </body>
 </html>
