--- a/app/views/manage/home/top.html.erb
+++ b/app/views/manage/home/top.html.erb
@@ -29,7 +29,7 @@
 			</tr>
 			<tr>
 				<td>
-				<%= link_to manage_tags_path do %>
+				<%= link_to tags_path do %>
 					<span>タグ一覧</span><br />
 				<% end %>
 				<span>(  タグ詳細 / タグ編集 / ステータスの変更 / タグ検索)</span>
@@ -37,7 +37,7 @@
 			</tr>
 			<tr>
 				<td>
-				<%= link_to manage_tags_path do %>
+				<%= link_to tags_path do %>
 					<span>ラベル一覧</span><br />
 				<% end %>
 				<span>( ラベル詳細 / ラベル編集 / ステータスの変更 / ラベル検索)</span>
