--- a/app/views/manage/tags/_sidebar.html.erb
+++ b/app/views/manage/tags/_sidebar.html.erb
@@ -6,21 +6,21 @@
 		<tbody>
 		<tr>
 			<td>
-			<%= link_to manage_tags_path do %>
+			<%= link_to tags_path do %>
 				<h5><span class="badge badge-secondary">全件 (<%= Tag.all.count %>)</span></h5>
 			<% end %>
 			</td>
 		</tr>
 		<tr>
 			<td>
-			<%= link_to manage_tags_path(is_void: "false") do %>
+			<%= link_to tags_path(is_void: "false") do %>
 				<h5><span class="badge badge-primary">有効 (<%= Tag.all.valid.count %>)</span></h5>
 			<% end %>
 			</td>
 		</tr>
 		<tr>
 			<td>
-			<%= link_to manage_tags_path(is_void: "true") do %>
+			<%= link_to tags_path(is_void: "true") do %>
 				<h5><span class="badge badge-danger">無効 (<%= Tag.all.invalid.count %>)</span></h5>
 			<% end %>
 			</td>
