--- a/app/views/public/todolists/_index.html.erb
+++ b/app/views/public/todolists/_index.html.erb
@@ -16,7 +16,7 @@
 		<% if user_signed_in? %>
 			<%= link_to '設定はこちらから', todolists_path, class: 'btn btn-outline-info' %>
 		<% else %>
-			<span>ユーザーは未設定です</span>
+			<span>非公開です</span>
 		<% end %>
 	</div>
 <% end %>
