--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,11 @@
-<footer class="text-muted">
-  <div class="text-left py-2">
-    <span>Copyright by makiharu<span>
-  </div>
-  <div class="footer-list">
-	  <ul class="text-right">
-	    <li>運営情報</li>
-	    <li><%= link_to 'お問い合わせ', new_contact_path %></li>
-	  </ul>
-  </div>
-</footer>
+
+<div class="text-left py-2">
+<span>Copyright by makiharu</span>
+</div>
+<div class="footer-list">
+  <ul class="text-right">
+    <li>運営情報</li>
+    <li><%= link_to 'お問い合わせ', new_contact_path %></li>
+  </ul>
+</div>
+
