--- a/app/views/manage/boards/show.html.erb
+++ b/app/views/manage/boards/show.html.erb
@@ -9,7 +9,6 @@
   </div>
 </div>
 
-
 <div class="form-set">
   <div class="board-head">
     <div class="text-left">
@@ -36,7 +35,7 @@
 
 
 <div class="comments">
-  <div class="form-set">
+  <div class="comment-form">
     <div class="comment-heading">
       <h4>コメント一覧</h4>
       <!--each_with_indexは回したときにそれぞれの要素が何番目か返してくれるメソッド-->
@@ -54,18 +53,31 @@
                 <% end %>
             </span>
 
-            <%= link_to '削除',  manage_board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
-
+            <!--モーダルウィンドウ-->
+            <button type="button" class="btn btn-danger mb-12" data-toggle="modal" data-target="#Modal">削除</button>
+            <!-- ボタン・リンククリック後に表示される画面の内容 -->
+            <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3>削除確認画面</h3>
+                        </div>
+                        <div class="modal-body m-3">
+                            <h5 class="text-left">本当に削除しますか？</h5>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                            <button type="button" class="btn btn-default"><%= link_to '削除',  manage_board_board_comment_path(comment.id), method: :delete, class: 'btn btn-outline-danger' %></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
           </div>
         </div>
       <% end %>
-
-
     </div>
   </div>
 </div>
-
-
 
 
 
