--- a/app/views/manage/labels/_sidebar.html.erb
+++ b/app/views/manage/labels/_sidebar.html.erb
@@ -6,19 +6,19 @@
 		<tbody>
 		<tr>
 			<td>
-				<%= link_to manage_labels_path do %>
-					<h5><span class="badge badge-secondary">全件 (<%= Label.all.count %>)</span></h5>
-				<% end %>
+			<%= link_to labels_path do %>
+				<h5><span class="badge badge-secondary">全件 (<%= Label.all.count %>)</span></h5>
+			<% end %>
 			</td>
 		</tr>
 		<tr>
-			<td><%= link_to manage_labels_path(is_void: "false") do %>
+			<td><%= link_to labels_path(is_void: "false") do %>
 					<h5><span class="badge badge-primary">有効 (<%= Label.all.valid.count %>)</span></h5>
 				<% end %>
 			</td>
 		</tr>
 		<tr>
-			<td><%= link_to manage_labels_path(is_void: "true") do %>
+			<td><%= link_to labels_path(is_void: "true") do %>
 					<h5><span class="badge badge-danger">無効 (<%= Tag.all.invalid.count %>)</span></h5>
 				<% end %>
 			</td>
