--- a/app/views/manage/labels/edit.html.erb
+++ b/app/views/manage/labels/edit.html.erb
@@ -1,18 +1,14 @@
 <!--ステータスを無効にしたら、掲示板追加の時に、タグ選択に現れない-->
 <div class='row'>
 	<div class="col-md-6 offset-md-2">
-		<div class="float-right">
-			<%= link_to '一覧画面に戻る', manage_labels_path, class: 'btn btn-secondary' %>
-		</div>
-		<div class="form-set">
-			<div class="label-heading">
+
+		<div class="card card-default">
+			<div class="card-head thead">
 				<h4 class="text-center mb-3">ラベル編集</h5>
 			</div>
-			<div class="label-body">
-
-				<%= form_with model: [:manage, @label], local: true do |f| %>
+			<div class="card-body">
+				<%= form_with model: @label, local: true do |f| %>
 					<%= render partial: 'shared/error_messages', locals: { obj: @label} %>
-
 				<div class="form-group">
 					<%= f.label 'ラベル名', class: "form-control-label" %>
 					<%= f.text_field :name, class: 'form-control' %>
@@ -21,10 +17,10 @@
 					<span><%= f.radio_button :is_void, :"false" %>有効</span>
 					<span><%= f.radio_button :is_void, :"true" %>無効</span>
 				</div>
-
 				<div class="actions">
 					<%= f.submit '保存する', class: 'btn btn-outline-primary btn-block' %>
 				</div>
+				<%= link_to '戻る', labels_path, class: 'btn btn-outline-secondary btn-block' %>
 				<% end %>
 			</div>
 		</div>
