--- a/app/views/manage/tags/_form.html.erb
+++ b/app/views/manage/tags/_form.html.erb
@@ -1,9 +1,7 @@
-<!-- Modal -->
-<!--exampleModalが必要-->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="tagModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-    	<%= form_with model: [:manage, tag], local: true do |f| %>
+    	<%= form_with model: tag, local: true do |f| %>
 			<%= render partial: 'shared/error_messages', locals: { obj: tag} %>
 	    	<div class="modal-header">
 	        	<h5 class="modal-title" id="exampleModalLabel">タグ追加</h5>
@@ -13,17 +11,15 @@
 	      	</div>
 	      	<div class="modal-body">
 	      		<div class="text-left">
-
-				<div class="form-group">
-					<%= f.label 'タグ名', class: "form-control-label" %>
-					<%= f.text_field :name, class: 'form-control' %>
+					<div class="form-group">
+						<%= f.label 'タグ名', class: "form-control-label" %>
+						<%= f.text_field :name, class: 'form-control' %>
+					</div>
+					<div class="form-group">
+						<span><%= f.radio_button :is_void, :"false" %>有効</span>
+						<span><%= f.radio_button :is_void, :"true" %>無効</span>
+					</div>
 				</div>
-				<div class="form-group">
-					<span><%= f.radio_button :is_void, :"false" %>有効</span>
-					<span><%= f.radio_button :is_void, :"true" %>無効</span>
-				</div>
-
-			</div>
 			</div>
 	     	<div class="modal-footer">
 		        <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
