--- a/app/views/manage/tags/edit.html.erb
+++ b/app/views/manage/tags/edit.html.erb
@@ -1,8 +1,7 @@
-<!--ステータスを無効にしたら、掲示板追加の時に、タグ選択に現れない-->
 <div class='row'>
 	<div class="col-md-6 offset-md-2">
 		<div class="float-right">
-			<%= link_to '一覧画面に戻る', manage_tags_path, class: 'btn btn-secondary' %>
+			<%= link_to '一覧画面に戻る', tags_path, class: 'btn btn-secondary' %>
 		</div>
 		<h3>編集画面</h3>
 
@@ -12,7 +11,7 @@
 			</div>
 			<div class="tag-body">
 
-				<%= form_with model: [:manage, @tag], local: true do |f| %>
+				<%= form_with model: @tag, local: true do |f| %>
 					<%= render partial: 'shared/error_messages', locals: { obj: @tag} %>
 
 				<div class="form-group">
