--- a/app/views/manage/users/show.html.erb
+++ b/app/views/manage/users/show.html.erb
@@ -34,7 +34,7 @@
 						<% if @user.is_deleted == false %>
 	                      <span class="badge badge-pill badge-primary">有効会員</span>
 	              		<% else %>
-	                  	  <span class="badge badge-pill badge-primary">退会済み</span>
+	                  	  <span class="badge badge-pill badge-danger">退会済み</span>
 	              		<% end %>
 	 				</td>
 				</tr>
