--- a/app/views/public/boards/show.html.erb
+++ b/app/views/public/boards/show.html.erb
@@ -64,7 +64,26 @@
 
             <% if comment.user_id == current_user.id %>
               <%= link_to '編集', edit_board_board_comment_path(comment.id), class: 'btn btn-outline-success' %>
-              <%= link_to '削除', board_board_comment_path(comment.id), method: :delete, data: {confirm: '本当に削除しますか？'}, class: 'btn btn-outline-danger' %>
+
+            <!--モーダルウィンドウ-->
+            <button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#Modal">削除</button>
+            <!-- ボタン・リンククリック後に表示される画面の内容 -->
+            <div class="modal fade" id="Modal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3>削除確認画面</h3>
+                        </div>
+                        <div class="modal-body m-3">
+                            <h5 class="text-left">本当に削除しますか？</h5>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                            <button type="button" class="btn btn-outline-danger"> <%= link_to '削除', board_board_comment_path(comment.id), method: :delete, class: 'btn btn-outline-danger' %></button>
+                        </div>
+                    </div>
+                </div>
+              </div>
             <% end %>
 
             <!--コメントに対するいいねボタン Ajax化-->
@@ -86,12 +105,10 @@
 <div class="comment-header">
     <h4>回答フォーム</h4>
 </div>
-<div class="comment-form">
+<div class="answer-form">
   <%= form_with model: [@board, @new_comment], local: true do |f| %>
-
-     <%#= f.hidden_field :board_id %>
     <div class="form-group">
-      <%= f.text_area :comment, class: 'form-control', rows: 6 %>
+      <%= f.text_area :comment, class: 'form-control', rows: 10 %>
     </div>
 
     <div class="actions">
