--- a/app/views/public/comment_likes/_like.erb
+++ b/app/views/public/comment_likes/_like.erb
@@ -3,14 +3,14 @@
 	<% if comment.comment_liked_by?(current_user) %>
 	  <li>
 	    <%= link_to board_board_comment_comment_likes_path(comment.board_id, comment.id), method: :delete, remote: true do %>
-	    <i class="far fa-thumbs-up">いいね</i>
+	    <i class="far fa-thumbs-up faa-vertical animated-hover">いいね</i>
 	    <%= comment.comment_likes.count %>
 	    <% end %>
 	  </li>
 	<% else %>
 	  <li>
 	    <%= link_to board_board_comment_comment_likes_path(comment.board_id, comment.id), method: :post, remote: true do %>
-	    <i class="far fa-thumbs-up"></i>いいね</i>
+	    <i class="far fa-thumbs-up faa-vertical animated-hover"></i>いいね</i>
 	    <%= comment.comment_likes.count %>
 	    <% end %>
 	  </li>
