--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,11 +1,24 @@
-
 <div class="text-left py-2">
-<span>Copyright by makiharu</span>
+	<div class="footer-logo">Study Record</div>
 </div>
-<div class="footer-list">
-  <ul class="text-right">
-    <li>運営情報</li>
-    <li><%= link_to 'お問い合わせ', new_contact_path %></li>
-  </ul>
+<div class="footer-list mb-3">
+	<ul class="text-right">
+		<span>  各種SNSリンク</span>
+		<li class="faa-parent animated-hover">
+			<i class="fab fa-instagram-square faa-pulse fa-fw fa-2x icon-instagram"></i>
+		</li>
+		<li class="faa-parent animated-hover">
+			<i class="fab fa-twitter faa-wrench  fa-fw fa-2x icon-twitter"></i>
+		</li>
+		<li class="faa-parent animated-hover">
+			<i class="fab fa-facebook faa-spin fa-fw fa-2x icon-facebook"></i>
+		</li>
+	</ul>
+	<hr />
+	<div class="contact-link text-right mb-3">
+		<span><%= link_to new_contact_path do %>
+			お問い合わせフォーム<i class="far fa-paper-plane"></i>
+			<% end %>
+		</span>
+	　</div>
 </div>
-
