--- a/app/views/public/todolists/index.html.erb
+++ b/app/views/public/todolists/index.html.erb
@@ -23,7 +23,7 @@
 				</div>
 			</div>
 		</div>
-		<%= link_to 'マイプロフィールへ戻る', user_path(current_user.id), class: 'btn btn-outline-success' %>
+		<span><%#= link_to 'マイページへ戻る', user_path(current_user.id), class: 'btn btn-outline-success' %></span>
 	</div>
 
 	<div class="col-md-7">
