--- a/app/views/public/boards/new.html.erb
+++ b/app/views/public/boards/new.html.erb
@@ -6,9 +6,8 @@
 			</div>
 			<div class="card-body">
 			<!--投稿フォーム-->
-			<%= render 'form', board: @board, obj: @board %>
+			<%= render 'form', board: @board, tags: @tags, obj: @board %>
 			</div>
-
 		</div>
 	</div>
 </div>
