--- a/app/views/public/todolists/_form.html.erb
+++ b/app/views/public/todolists/_form.html.erb
@@ -11,7 +11,7 @@
 		<div class="form-group">
 			<%= f.fields_for :label_lists do |list| %>
 				<%= list.label :選択, class: 'label_id' %>
-				<%= list.collection_select :label_id, Label.where(is_void: false), :id, :name, {}, class: 'form-control-sm' %>
+				<%= list.collection_select :label_id, Label.valid, :id, :name, {}, class: 'form-control-sm' %>
 			<% end %>
 		</div>
 		<% end %>
@@ -20,7 +20,8 @@
 	    <% if controller.action_name == 'edit' %>
 		<div class="form-group">
 	        <!--属性追加-->
-	        <%= f.collection_select :label_id, Label.where(is_void: false), :id, :name, {}, class: 'form-control-sm' %>
+	        <%#= f.collection_select :label_id, Label.where(is_void: false), :id, :name, {}, class: 'form-control-sm' %>
+	        <%= f.collection_select :label_id, Label.valid, :id, :name, {}, class: 'form-control-sm' %>
 	    </div>
 	    <div class="form-group">
 	        <%#= f.radio_button :done, { value: false } %>
