{fix]font-awesome/icon

--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -26,11 +26,11 @@
 			<td>登録日: <%= l user.created_at %></td>
 		</tr>
 		<tr>
-			<td>本日の達成リスト数 : <span class="badge badge-info"><%= user.today_list_sum %></span></td>
+			<td>本日の達成リスト数 : <span class="badge badge-dark"><%= user.today_list_sum %></span></td>
 		</tr>
 		<tr>
 			<td>
-				過去の達成リスト数: <span class="badge badge-info"><%= user.done_list_sum %></span>
+				過去の達成リスト数: <span class="badge badge-dark"><%= user.done_list_sum %></span>
 			</td>
 		</tr>
 		<tr>
