--- a/app/views/public/board_likes/index.html.erb
+++ b/app/views/public/board_likes/index.html.erb
@@ -1,12 +1,12 @@
 <div class="row">
-	<div class="col-xs-4">
+	<div class="col-md-4">
 		<div class="card card-default mr-5 mt-5">
 		<!--プロフィール-->
 		<%= render 'public/users/profile', user: @user %>
 		</div>
 	</div>
 
-	<div class="col-xs-8">
+	<div class="col-md-8">
 		<div class="board-title">
 			<p class="text-right">
 				<%= link_to 'マイページへ戻る', user_path(@user), class: "btn btn-warning" %>
@@ -23,8 +23,7 @@
 				<% if @board_likes.any? %>
 					<thead>
 						<tr>
-							<td>タイトル</td>
-							<td>本文</td>
+							<td>タイトル  </td>
 							<td>ユーザー名</td>
 							<td>投稿日時</td>
 							<td>詳細</td>
@@ -34,9 +33,8 @@
 						<% @board_likes.each do |board_like| %>
 						<tr>
 							<td><%= board_like.board.title %></td>
-							<td><%= board_like.board.body.truncate(23) %></td>
 							<td><%= board_like.user.name %></td>
-							<td><%= l board_like.board.created_at %></td>
+							<td class="small"><%= l board_like.board.created_at %></td>
 							<td><%= link_to '詳細', board_path(board_like.board), class: 'btn btn-outline-info' %></td>
 						</tr>
 						<% end %>
