--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -11,7 +11,7 @@ body {
 #logo {
 	font-family: 'Ruda', sans-serif;
 	text-decoration: none;
-  	color: rgb(33, 150, 243);
+  color: rgb(33, 150, 243);
 }
 
 
@@ -66,6 +66,16 @@ li {
 nav {
 	margin: 0 0 0 auto;/*左マージンにauto*/
 }
+
+.pc-nav {
+  color: rgb(33, 150, 243);
+}
+
+.pc-nav a{
+  color: rgb(33, 150, 243);
+}
+
+
 
 
 .pagination {
