--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,14 +1,14 @@
 .image2 {
-  background-image: image-url(image02.jpg);
+  background-image: image-url("image02.jpg");
 }
 .image3 {
-  background-image: image-url(image03.jpg);
+  background-image: image-url("image03.jpg");
 }
 .image4 {
-  background-image: image-url(image04.jpg);
+  background-image: image-url("image04.jpg");
 }
 .image5 {
-  background-image: image-url(image05.jpg);
+  background-image: image-url("image05.jpg");
 }
 
 
