--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -14,7 +14,7 @@
 
 <div class="row">
   <div class="about_guide">
-        <h1 class="text-center">~ Study Recordできること ~</h1>
+        <h1 class="text-center">~ Study Recordでできること ~</h1>
       </div>
       <div class="about-guide-child-contents">
         <div style="display: flex;">
