[fix]user-profile-layout

--- a/app/views/public/users/_profile.html.erb
+++ b/app/views/public/users/_profile.html.erb
@@ -35,7 +35,7 @@
 		</tr>
 		<tr>
 			<td>
-				記事投稿数: <span class="badge badge-info badge badge-info faa-bounce animated-hover">
+				記事投稿数: <span class="badge badge-dark faa-bounce">
 					<%= user.boards.count %></span>
 			</td>
 		</tr>
